Updated more class to include functions for Projector. Updated console styles to correct alignment issue.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -37,6 +37,10 @@ form label {
 		color: #D4D4D4;
 	}
 
+.btn {
+	vertical-align: middle;
+}
+
 /* List Page
    -------------*/
 div.content div.row {
